--- a/src/app/crm-app/crm-app.component.html
+++ b/src/app/crm-app/crm-app.component.html
@@ -1,7 +1,7 @@
 <section class="main-container">
     <h2 class="p-2"><i class="fas fa-tasks mr-2"></i>CRM App</h2>
     <div class="form-container">
-        <h3 class="ml-4 mt-3">Add New Contact<i class="fas fa-plus-square ml-3" (click)="showForm('new')"></i></h3>
+        <h3 class="ml-4 mt-3">Add New Company<i class="fas fa-plus-square ml-3" (click)="showForm('new')"></i></h3>
         <!-- <form class="container d-flex flex-column justify-content-around" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label for="firstName">First Name</label>
@@ -15,12 +15,12 @@
         </form> -->
     </div>
     <div class="p-4 search-box-container form-group" *ngIf="contacts.length > 10;">
-        <label for="searchTerm">Search Contacts</label>
+        <label for="searchTerm">Search Companies</label>
         <input type="text" class="form-control" name="searchTerm" [(ngModel)]="searchTerm" (ngModelChange)="searchContact($event)">
     </div>
     <div class="contact-container p-4">
-        <h3>Contacts</h3>
-        <h5 *ngIf="!isLoading && contacts.length == 0">You haven't created any contacts!</h5>
+        <h3>Companies</h3>
+        <h5 *ngIf="!isLoading && contacts.length == 0">You haven't created any companies!</h5>
         <div class="spinner-border text-danger" *ngIf="isLoading" role="status">
             <span class="sr-only">Loading...</span>
         </div>
@@ -28,7 +28,7 @@
             <li class="list-group-item" *ngFor="let c of contacts; let i = index;">
                 <div class="d-flex flex-row">
                     <!-- <span class="flex-grow-1 mt-1 contact" (click)="contactDetails(c)">{{ c.firstName }} {{ c.lastName }}</span> -->
-                    <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details', { firstName: c.firstName, lastName: c.lastName, company: c.company, phone: c.phone, fax: c.fax, email: c.email }]">{{ c.firstName }} {{ c.lastName }}</span>
+                    <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details', { company: c.company, street: c.street, city: c.city, state: c.state, zip: c.zip, phone: c.phone, fax: c.fax }]">{{ c.company }}</span>
                     <i class="far fa-edit m-2" (click)="showForm(c.id)"></i>
                     <i class="far fa-trash-alt m-2" (click)="delete(i)"></i>
                 </div>
@@ -38,7 +38,7 @@
             <li class="list-group-item" *ngFor="let c of searchedContacts; let i = index;">
                 <div class="d-flex flex-row">
                     <!-- <span class="flex-grow-1 mt-1 contact" (click)="contactDetails(c)">{{ c.firstName }} {{ c.lastName }}</span> -->
-                    <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details', { firstName: c.firstName, lastName: c.lastName, company: c.company, phone: c.phone, fax: c.fax, email: c.email }]">{{ c.firstName }} {{ c.lastName }}</span>
+                    <span class="flex-grow-1 mt-1 contact" [routerLink]="['/details', { company: c.company, street: c.street, city: c.city, state: c.state, zip: c.zip, phone: c.phone, fax: c.fax }]">{{ c.company }}</span>
                     <i class="far fa-edit m-2" (click)="showForm(c.id)"></i>
                     
                     <i class="far fa-trash-alt m-2" (click)="delete(i)"></i>
@@ -48,19 +48,35 @@
     </div>
     <div class="edit-form-container d-flex flex-column justify-content-center align-items-center" *ngIf="showNewContactForm || showEditForm">
         <div class="edit-form">
-            <h3 class="ml-4 mt-3">Edit Contact</h3>
+            <h3 class="ml-4 mt-3">{{ showNewContactForm ? "New Company" : "Edit Company"}}</h3>
             <form class="container d-flex flex-column justify-content-around" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="firstName">First Name  *</label>
                     <input type="text" class="form-control" formControlName="firstName" required>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last Name  *</label>
                     <input type="text" class="form-control" formControlName="lastName" required>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="company">Company Name</label>
                     <input type="text" class="form-control" formControlName="company">
+                </div>
+                <div class="form-group">
+                    <label for="street">Street</label>
+                    <input type="text" class="form-control" formControlName="street">
+                </div>
+                <div class="form-group">
+                    <label for="city">City</label>
+                    <input type="text" class="form-control" formControlName="city">
+                </div>
+                <div class="form-group">
+                    <label for="state">State</label>
+                    <input type="text" class="form-control" formControlName="state">
+                </div>
+                <div class="form-group">
+                    <label for="zip">Zip</label>
+                    <input type="text" class="form-control" formControlName="zip">
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
@@ -70,10 +86,10 @@
                     <label for="fax">Fax</label>
                     <input type="tel" class="form-control" formControlName="fax">
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" class="form-control" formControlName="email">
-                </div>
+                </div> -->
                 <button type="submit" class="btn">Save</button>
             </form>
         </div>
@@ -85,7 +101,7 @@
                 <h3>Currently in development</h3>
                 <p>Backend not implemented. Some funtions not working or completed.</p>
                 <p>
-                    You are able to add contacts and go to contact details page however, your information will not
+                    You are able to add companies and go to details page however, your information will not
                     save on page change.
                 </p>
             </div>
