Added content under Engineering Skills section.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,19 +62,19 @@
             <div class="skills-container d-flex flex-column">
                 <h3 class="mt-5"><i class="fas fa-code mr-2"></i>Engineering Skills</h3>
                 <p>
-                    <strong>I specialize in applications built with Angular.</strong>
+                    <strong>I specialize in applications built with Angular and ASP.Net Core.</strong>
                     <!-- Recently I've developed a Rest API using .Net Core and currently building out
                     the frontend using <span>Angular</span> and <span>TypeScript</span>. -->
                 </p>
                 <p>
                     I have custom built and written every line of code for this website. Including
-                    the backend which is hosted on Azure.
+                    the API which is hosted on Azure.
                 </p>
                 <p>Technologies used include:</p>
                 <ul>
                     <li>Angular: TypeScript / JavaScript</li>
-                    <li>ASP.Net Core for backend REST API</li>
-                    <li>Azure to host backend</li>
+                    <li>ASP.Net Core: C#</li>
+                    <li>Azure to host ASP.Net Core web apps</li>
                     <li>Ng2-Charts / Chart.js used for the COVID graphs</li>
                     <li>EmailJS for the contact form</li>
                     <li>Google Auth to sign in to the dashboard</li>
