--- a/src/app/crm-app/crm-app.component.html
+++ b/src/app/crm-app/crm-app.component.html
@@ -58,6 +58,9 @@
                     <label for="lastName">Last Name  *</label>
                     <input type="text" class="form-control" formControlName="lastName" required>
                 </div> -->
+                <!-- <div class="form-group" class="id-input">
+                    <input type="number" class="form-control" formControlName="id" disabled>
+                </div> -->
                 <div class="form-group">
                     <label for="company">Company Name</label>
                     <input type="text" class="form-control" formControlName="company">
