--- a/src/app/crm-app/contact-details/contact-details.component.html
+++ b/src/app/crm-app/contact-details/contact-details.component.html
@@ -25,8 +25,8 @@
                 <div class="d-flex flex-row align-items-center">
                     <span class="flex-grow-1 mt-1 task">{{ c.firstName }} {{ c.lastName }}</span>
                     <span class="mt-1 contact-phone" *ngIf="c.phone.length > 4">({{ c.phone | slice:0:3 }}) {{ c.phone | slice:3:6 }}-{{ c.phone | slice:6:10 }}</span>
-                    <i class="far fa-edit m-2" (click)="initContactForm(i)"></i>
-                    <i class="far fa-trash-alt m-2" (click)="deleteContact(i)"></i>
+                    <i class="far fa-edit m-2" (click)="initContactForm(c.id)"></i>
+                    <i class="far fa-trash-alt m-2" (click)="deleteContact(c.id)"></i>
                 </div>
             </li>
         </ul>
@@ -37,7 +37,7 @@
             <form class="container d-flex flex-column justify-content-around" [formGroup]="contactForm" (ngSubmit)="addContact()">
                 <div class="form-group">
                     <label for="firstName">First Name</label>
-                    <input type="text" class="form-control" formControlName="firstName">
+                    <input type="text" class="form-control" formControlName="firstName" required>
                 </div>
                 <div class="form-group">
                     <label for="lastName">Last Name</label>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="form-group">
                     <label for="phone">Phone</label>
-                    <input type="tel" class="form-control" formControlName="phone">
+                    <input type="tel" class="form-control" formControlName="phone" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
