Updated Tech section.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,6 +74,7 @@
                 <ul>
                     <li>Angular: TypeScript / JavaScript</li>
                     <li>ASP.Net Core: C#</li>
+                    <li>Web Apps use MySQL Database</li>
                     <li>Azure to host ASP.Net Core web apps</li>
                     <li>Ng2-Charts / Chart.js used for the COVID graphs</li>
                     <li>EmailJS for the contact form</li>
