Fixed navbar layout issue.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -149,7 +149,7 @@
 <section class="nav-bar-lrg">
     <section class="navbar-container container d-flex flex-row align-items-center">
         <div class="logo flex-grow-1">
-            <h1>Chattanooga Web Developer</h1>
+            <h1 class="ml-2">Chattanooga Web Developer</h1>
         </div>
         <div class="nav-links d-flex flex-row justify-content-around">
             <div routerLink="/">Home</div>
