--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,8 @@
 <section class="login-container">
     <h2 class="p-3"><i class="fas fa-sign-in-alt mr-2"></i>{{ isLoggedIn ? 'Log Out' : 'Login' }}</h2>
     <div class="button-container  d-flex flex-column justify-content-center align-items-center">
-        <h3>Sign in with your google accout!</h3>
+        <p *ngIf="!isLoggedIn">Log in to save your data when using the Web Apps.</p>
+        <!-- <h3 *ngIf="!isLoggedIn">Sign in with:</h3> -->
         <i class="btn" *ngIf="!isLoggedIn" (click)="signInWithGoogle()">
             <img src="../../assets/btn_google_signin_light_normal_web.png" alt="">
         </i>
