Changed text in popup

--- a/src/app/crm-app/crm-app.component.html
+++ b/src/app/crm-app/crm-app.component.html
@@ -101,10 +101,11 @@
             <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i>
             <div>
                 <h3>Currently in development</h3>
-                <p>Backend not implemented. Some funtions not working or completed.</p>
+                <p>Backend not completely implemented. Some features not working or completed.</p>
                 <p>
-                    You are able to add companies and go to details page however, your information will not
-                    save on page change.
+                    You are able to add, update and delete companies as well as navigate to company details page.
+                    You can add, update, delete company contacts from the details page. Your information will not
+                    be saved unless you've logged in.
                 </p>
             </div>
         </div>
