--- a/src/app/crm-app/contact-details/contact-details.component.css
+++ b/src/app/crm-app/contact-details/contact-details.component.css
@@ -60,8 +60,19 @@ h2 {
 }
 
 .task-form-container {
-    max-width: 400px;
-    margin: 0px auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.task-form {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    width: 100%;
+    padding-bottom: 1em;
+    max-width: 500px;
 }
 
 .task-container {
