--- a/src/app/crm-app/crm-app.component.html
+++ b/src/app/crm-app/crm-app.component.html
@@ -61,8 +61,8 @@
                     <input type="number" class="form-control" formControlName="id" disabled>
                 </div> -->
                 <div class="form-group">
-                    <label for="company">Company Name</label>
-                    <input type="text" class="form-control" formControlName="company">
+                    <label for="companyName">Company Name</label>
+                    <input type="text" class="form-control" formControlName="companyName">
                 </div>
                 <div class="form-group">
                     <label for="street">Street</label>
