--- a/src/app/crm-app/crm-app.component.html
+++ b/src/app/crm-app/crm-app.component.html
@@ -1,5 +1,6 @@
 <section class="main-container">
     <h2 class="p-2"><i class="fas fa-tasks mr-2"></i>CRM App</h2>
+    <h3 class="ml-3" *ngIf="user != null">Welcome, {{ user.name }}</h3>
     <div class="form-container">
         <h3 class="ml-4 mt-3">Add New Company<i class="fas fa-plus-square ml-3" (click)="showForm('new')"></i></h3>
         <!-- <form class="container d-flex flex-column justify-content-around" [formGroup]="contactForm" (ngSubmit)="onSubmit()">
