--- a/src/app/angular-tutorials/angular-tutorials.component.html
+++ b/src/app/angular-tutorials/angular-tutorials.component.html
@@ -6,14 +6,14 @@
         <ng-container *ngFor="let item of angList; let i = index;">
             <h3 class="mt-4">{{ item.title }}</h3>
             <p>{{ item.body }}</p>
-            <div class="video-container">
+            <div class="video-container d-flex flex-row flex-wrap justify-content-center align-items-between">
                 <div class="spinner-border text-danger" *ngIf="loading" role="status">
                     <span class="sr-only">Loading...</span>
                 </div>
                 <iframe
                 [hidden]="loading"
                 (load)="onLoad()"
-                class="mx-2"
+                class="m-2"
                 *ngFor="let vid of item.video; let j = index;"
                 [src]="vid.info | safe" 
                 frameborder="0"
