--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -65,6 +65,9 @@
                         <li class="list-group-item" routerLink="/crm" (click)="toggleMenu()" (click)="toggleMore('projects')">
                             CRM
                         </li>
+                        <li class="list-group-item" routerLink="/events" (click)="toggleMenu()" (click)="toggleMore('projects')">
+                            Events
+                        </li>
                     </ul>
                 </div>
                 <li class="list-group-item d-flex" (click)="toggleMore('tutorials')">
@@ -161,6 +164,9 @@
                         </li>
                         <li class="list-group-item" routerLink="crm">
                             CRM
+                        </li>
+                        <li class="list-group-item" routerLink="events">
+                            Events
                         </li>
                     </ul>
                 </div>
