--- a/src/app/events-app/events-app.component.html
+++ b/src/app/events-app/events-app.component.html
@@ -1,8 +1,20 @@
 <section class="main-container">
     <h2 class="p-2"><i class="fas fa-tasks mr-2"></i>Events App</h2>
     <h3 class="ml-3" *ngIf="user != null">Welcome, {{ user.name }}</h3>
-    <div class="form-container ml-4 mt-3">
+    <div class="form-container">
         <h3 class="ml-4 mt-3">Add New Event<i class="fas fa-plus-square ml-3" (click)="showForm('new')"></i></h3>
-
+        <div class="event-form-container d-flex justify-content-center align-items-center p-3" *ngIf="showNewEventForm || showEditEventForm">
+            <form class="container d-flex flex-column justify-content-around align-items-center p-3" [formGroup]="eventsForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="eventName">Event Name</label>
+                    <input type="text" class="form-control" formControlName="eventName">
+                </div>
+                <div class="form-group">
+                    <label for="eventDate">Event Date</label>
+                    <input type="date" class="form-control" formControlName="eventDate">
+                </div>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </div>
     </div>
 </section>
