Count down timer working. Need to move to event details page.

--- a/src/app/events-app/events-app.component.html
+++ b/src/app/events-app/events-app.component.html
@@ -14,7 +14,7 @@
                 <div class="d-flex flex-row">
                     <!-- <span class="flex-grow-1 mt-1 contact" (click)="contactDetails(c)">{{ c.firstName }} {{ c.lastName }}</span> -->
                     <span class="flex-grow-1 mt-1 contact">{{ e.eventName }}</span>
-                    <span class="date mt-1">{{ showDaysLeft(e.eventDate) }}</span>
+                    <span class="date mt-1" id="{{ i }}" [load]="showCountDown(e.eventDate, i)"></span>
                     <i class="far fa-edit m-2" (click)="showForm(c.id)"></i>
                     <i class="far fa-trash-alt m-2" (click)="delete(c.id)"></i>
                 </div>
