--- a/src/app/events-app/events-app.component.css
+++ b/src/app/events-app/events-app.component.css
@@ -29,6 +29,22 @@ h2 {
     top: 0;
 }
 
+.popup-container {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.popup-inner-container {
+    background-color: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    width: 100%;
+    padding-bottom: 1em;
+    max-width: 500px;
+}
+
 form {
     background-color: rgba(0, 0, 0, 0.9);
     color: #fff;
