Added new component FBS-Scores.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -68,6 +68,9 @@
                         <li class="list-group-item" routerLink="/events" (click)="toggleMenu()" (click)="toggleMore('projects')">
                             Events
                         </li>
+                        <li class="list-group-item" routerLink="/scores" (click)="toggleMenu()" (click)="toggleMore('projects')">
+                            Scores
+                        </li>
                     </ul>
                 </div>
                 <li class="list-group-item d-flex" (click)="toggleMore('tutorials')">
@@ -167,6 +170,9 @@
                         </li>
                         <li class="list-group-item" routerLink="events">
                             Events
+                        </li>
+                        <li class="list-group-item" routerLink="scores">
+                            Scores
                         </li>
                     </ul>
                 </div>
