--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -65,6 +65,10 @@ h1 {
     color: black;
 }
 
+.more-items {
+    z-index: 100;
+}
+
 @media only screen and (min-width: 1025px) {
     .nav-links {
         font-size: 20px;
