--- a/src/app/fbs-scores/fbs-scores.component.html
+++ b/src/app/fbs-scores/fbs-scores.component.html
@@ -2,6 +2,7 @@
     <h2 class="p-3"><i class="fas fa-tasks mr-2"></i>Scores App</h2>
     <div class="main-container">
         <h3 class="ml-4 mt-3">College Football Scores</h3>
+        <h3 class="ml-4 mt-3">Week: {{ week }}</h3>
         <ul class="list-group list-group-flush mt-4">
             <li class="list-group-item" *ngFor="let game of games;">
                 {{ game.homeTeam }} {{ game.homeScore }} @ {{ game.awayTeam }} {{ game.awayScore }} <br>
