--- a/src/app/apps/crm-app/crm-app.component.css
+++ b/src/app/apps/crm-app/crm-app.component.css
@@ -76,7 +76,8 @@ button {
 .indev {
     background-color: rgba(0, 0, 0, 0.9);
     color: #fff;
-    width: 100%;
+    width: 90%;
     padding-bottom: 1em;
     max-width: 500px;
+    border-radius: 30px;
 }
