--- a/src/app/apps/crm-app/crm-app.component.html
+++ b/src/app/apps/crm-app/crm-app.component.html
@@ -99,7 +99,7 @@
     </div>
     <div class="indev-container d-flex flex-column align-items-center justify-content-center" *ngIf="indevPopup">
         <div class="indev d-flex flex-column align-items-center justify-content-center p-3">
-            <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i>
+            <!-- <i class="fas fa-times font-weight-bold align-self-end" (click)="togglePopup()"></i> -->
             <div>
                 <h3>Currently in development</h3>
                 <p>Backend not completely implemented. Some features not working or completed.</p>
@@ -108,6 +108,7 @@
                     You can add, update, delete company contacts from the details page. Your information will not
                     be saved unless you've logged in.
                 </p>
+                <button class="btn" (click)="togglePopup()">Close</button>
             </div>
         </div>
     </div>
