--- a/src/app/apps/blog-app/blog-post/blog-post.component.html
+++ b/src/app/apps/blog-app/blog-post/blog-post.component.html
@@ -2,7 +2,7 @@
     <h2 class="p-3"><i class="fas fa-blog mr-2"></i>{{ title }}</h2>
     <h3 class="p-2" routerLink="/blogs"><i class="far fa-arrow-alt-circle-left mr-2"></i>Back To Blogs</h3>
     <div class="body-container d-flex justify-content-center align-items-center">
-        <div [innerHTML]="post" class="p-3 d-flex justify-content-center align-items-center flex-column">
+        <div [innerHTML]="post" class="body-post mt-4 p-3 d-flex justify-content-center align-items-center flex-column">
         
         </div>
     </div>
